<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gigathinking.simpleapplock.Upgrade"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/id_rg_upgrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/no_ads"
            android:id="@+id/id_rb_no_ads"
            android:checked="true"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/adv_prot"
            android:id="@+id/id_rb_adv_prot" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ddd" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buy"
        android:background="@drawable/button_selector"
        android:id="@+id/id_btn_upgrade"/>
</LinearLayout>
