<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/id_ll_icon"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_icon_unlock"
                android:layout_width="match_parent"
                android:layout_weight="5"
                android:layout_height="0dp"
                android:scaleType="center" />
            <TextView
                android:id="@+id/tv_app_unlock"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:singleLine="true"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_unlock_message"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"
            android:text="@string/app_locked_gesture"/>
    </LinearLayout>

    <android.gesture.GestureOverlayView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="#ddd"
        android:gestureColor="@color/buttonSelector"
        android:id="@+id/gestureOverlayView">
        <TextView
            android:id="@+id/tv_gesture_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_gesture"
            android:layout_gravity="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:padding="5dp"/>
    </android.gesture.GestureOverlayView>
    <Button
        android:id="@+id/id_btn_forgot_gesture"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/forgot_gesture"
        android:background="@drawable/button_selector"
        android:layout_margin="10dp" />
</LinearLayout>